feat: fix Pi deployment and add essential data files
- Remove KindleHighlights.txt from .gitignore (needed for seeding)
- Add KindleHighlights.txt and reading-list.txt for database initialization
- Fix docker-compose.ssd.yml to use pre-built images
- Update Dockerfile for proper data file handling
- Optimize logging configuration for SSD deployment

--- a/.gitignore
+++ b/.gitignore
@@ -119,9 +119,10 @@ playwright-report/
 playwright/.cache/
 
 # Personal files that shouldn't be committed
-KindleHighlights.txt
 personal-notes.md
 reading-list.json
+
+# Note: KindleHighlights.txt and reading-list.txt are needed for database seeding
 
 # Raspberry Pi specific
 *.img
