--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -77,6 +77,14 @@ COPY --from=backend-builder --chown=nodejs:nodejs /app/backend/src/database/*.sq
 # Copy built frontend static files
 COPY --from=frontend-builder --chown=nodejs:nodejs /app/frontend/dist ./frontend/dist
 
+# Copy data files for seeding
+COPY --chown=nodejs:nodejs KindleHighlights.txt ./KindleHighlights.txt
+COPY --chown=nodejs:nodejs reading-list.txt ./reading-list.txt
+
+# Copy startup script
+COPY --chown=nodejs:nodejs scripts/docker-entrypoint.sh ./docker-entrypoint.sh
+RUN chmod +x ./docker-entrypoint.sh
+
 # Create directories for data persistence and logs
 RUN mkdir -p /app/data /app/logs /app/tmp && \
     chown -R nodejs:nodejs /app/data /app/logs /app/tmp
@@ -96,10 +104,10 @@ EXPOSE 3003
 
 # Add comprehensive health check optimized for Pi
 HEALTHCHECK --interval=60s --timeout=15s --start-period=60s --retries=3 \
-  CMD curl -f http://localhost:3003/health || exit 1
+  CMD curl -f http://localhost:3003/api/health || exit 1
 
 # Use tini for proper signal handling and zombie reaping (better for Pi)
 ENTRYPOINT ["tini", "--"]
 
-# Start the application with memory optimizations
-CMD ["node", "--max-old-space-size=256", "--max-semi-space-size=32", "backend/dist/index.js"]
+# Start the application with seeding via entrypoint script
+CMD ["/bin/sh", "./docker-entrypoint.sh"]
