--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -11,7 +11,7 @@ WORKDIR /app/frontend
 COPY frontend/package*.json ./
 
 # Install dependencies with ARM64 optimizations
-RUN npm install --prefer-offline --no-audit --no-fund
+RUN npm ci --prefer-offline --no-audit --no-fund
 
 # Copy frontend source code
 COPY frontend/ ./
