--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -10,8 +10,15 @@ WORKDIR /app/frontend
 # Copy package files first for better caching
 COPY frontend/package*.json ./
 
-# Install dependencies with ARM64 optimizations
-RUN npm ci --prefer-offline --no-audit --no-fund
+# Install dependencies with ARM64 optimizations and debugging
+RUN echo "Starting npm ci..." && \
+    npm ci --prefer-offline --no-audit --no-fund && \
+    echo "npm ci completed. Checking installation:" && \
+    ls -la node_modules/.bin/ | head -10 && \
+    echo "Checking for vite specifically:" && \
+    ls -la node_modules/.bin/vite || echo "VITE NOT FOUND" && \
+    echo "Node modules directory size:" && \
+    du -sh node_modules/ || echo "No node_modules directory"
 
 # Copy frontend source code
 COPY frontend/ ./
